# aws-job-market-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
athena/: create_tables.sql
backend/: .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  database.py  redis_client.py  security.py
backend/app/models/: __init__.py  application.py  company.py  job.py  resume_profile.py  user.py
backend/app/schemas/: application.py  job.py  search.py  user.py
backend/app/services/: ai_filter.py  duplicate_detector.py  job_scorer.py  resume_parser.py
backend/app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  INTERVIEW_PREP.md  RESUME_LINKEDIN.md  RUNBOOK.md
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  (+1 more)
infra/: monitoring.py  setup_aws.py
lambdas/common/: logging_utils.py  validation.py
lambdas/feature_extractor/: handler.py
lambdas/ingestor/: handler.py
lambdas/insights/: handler.py
lambdas/loader/: handler.py
lambdas/transformer/: handler.py
sql/: 01_schema.sql  02_reporting.sql  03_trends.sql  04_analytics_queries.sql
tests/: conftest.py  test_analytics_queries.py  test_insights.py  test_integration_s3.py  test_loader.py  test_logging_utils.py  test_pipeline_local.py  test_regression_fixes.py  test_reliability.py  test_validation.py
(+30 files in other folders)
