[project]
name = "aws-job-market-pipeline"
version = "1.0.0"
description = "Serverless AWS data platform for real-time job-market intelligence"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = [".", "lambdas"]

[tool.coverage.run]
source = ["lambdas"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in argument defaults (boto clients)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM"]
